# Automated-Burst-Image-Quality-Filter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
autoburstfilter/: __init__.py  cli.py  filters.py  gui_main.py  loader.py  ranker.py
docs/: ARCHITECTURE.md
src/: filters.py
tests/: test_filters.py  test_ranker.py
