[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoburstfilter"
version = "1.0.0"
description = "Automated sharpness-based image culling for burst photography."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aarav Rasquinha" }]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "rawpy>=0.18.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
autoburstfilter = "autoburstfilter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoburstfilter*"]
